# homelab

./: .env.example  .envrc  .gitignore  .mise.toml  .nxignore  .pre-commit-config.yaml  .sops.yaml  .super-linter.yml  CHANGELOG.md  CLAUDE.md  COVERAGE_OPTIMIZATION.md  Justfile  Makefile  README.md  TESTING_IMPLEMENTATION_COMPLETE.md  TEST_SUITE_SUMMARY.md  TEST_VALIDATION_SUMMARY.md  copier.yml  devbox.json  justfile  main.py  nx.json  package-lock.json  package.json  pipes.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  tmp-graph.html  tsconfig.base.json  validate_fixes.py  vitest.workspace.ts  workspace.json
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/chatmodes/: intent-translator.chatmode.md
.github/workflows/: ci-validate.yml  dev-ci.yml  logging-tests.yml  main-ci.yml  nx-validate.yml  sops-ci.yml  stage-ci.yml  super-linter-docs.yml  template-validation.yml  test.yml
.tests/bootstrap/: devbox.test.py  envrc.test.py  mise.test.py
apps/env-check/: project.json
docs/: Automation.md  Infra Toolkit.md  README-env.md  README.md  SUPABASE_MIGRATION.md  TESTING_DOCUMENTATION.md  TESTING_QUICK_REFERENCE.md  development_workflow.md  logging.md  quick_reference.md  structured-logging.md  supabase_refactoring_summary.md  todo.md  uv_implementation_summary.md
docs/Explanations/: Nx-Distributed-Architecture.md  Secrets-Management.md  Security-Model.md  System-Architecture.md  Tailscale-ACL.md  Tailscale.md  Test-Exit-Code-Convention.md
docs/Howto/: Add-New-Homelab-Node.md  Add-New-Nx-Project.md  Bootstrap this Project.md  Complete Infrastructure Configuration.md  Create-Dev-Machine.md  Deploy-Infrastructure.md  Encrypt-New-Secrets.md  Generate-And-Rotate-Keys.md  Run Nx Distributed Task Execution.md  Setup-Ansible.md  Setup-Development-Environment.md  Setup-Pulumi.md  Troubleshoot-Common-Issues.md
docs/Plans/: copier_dev.plan.md  reorg_docs.plan.md  whole_system.md
docs/Reference/: Branded-Types-API.md  Environment-Variables.md  Justfile-Recipe-Index.md  Migration-v1-to-v2.md  Template-Structure.md  Template-Testing.md  Template-Updates.md  Test-Suite-Index.md  Tool-Versions.md  example.envrc  example.nx-agents.env  example.pulumi.env  example.tailscale-acl.json
docs/Tutorials/: Build-A-Typed-Infrastructure-Module.md  Setup-Three-Node-Distributed-Build.md  Your-First-Deployment.md
docs/how-to/: linting.md  nx-project-configuration.md  observability.md  setup-environment.md
docs/planning/: homelab_installation.md  homelab_prd.md  homelab_spec.md  implementation_plan.md
docs/reference/: logging.md
docs/specs/: environment.md  log-schema.yaml
docs/temp/: errors_todo.txt
extensions/: __init__.py  validators.py
hooks/: __init__.py  pre_copy.py
infra/: example.ansible.env  example.env  example.env.sops  example.envrc  example.pulumi.env  pulumi-bootstrap  tailscale-acl.clean.json  tailscale.env.sops
infra/ansible-bootstrap/: .ansible-lint  .yamllint  ansible.cfg  requirements.txt
infra/pulumi-bootstrap/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  index.ts  package.json  tsconfig.json
infrastructure/: supabase.py  supabase_broken.py.bak  supabase_config.py  supabase_local.py  supabase_refactored.py
lib/: env-loader.sh  logging.sh
ops/vector/: README.md  sample_events.json  vector.toml
scripts/: 00-system-audit.py  01-install-components.py  __init__.py  _uv_utils.py  backup-manager.py  check-yaml.sh  cluster-heath-monitor.py  coverage_analysis.py  coverage_optimizer.py  deploy-supabase-example.py  dev-env-manager.py  dev_env_manager.py  doctor.sh  env-check.sh  generate-keys.sh  generate-nx-agent-secret.sh  generate-tailscale-authkey.sh  homelab-discovery.py  install-sops-age-wsl2.sh  install-tailscale-wsl2.sh  nx-agent-health-monitor.sh  nx-agent-restart.sh  nx-cache.service  performance-optimizer.py  run-markdownlint.sh  run-shellcheck.sh  ssh-key-manager.py  supabase-health-check.py  supabase_health_check.py  supabase_migration.py  tailscale-join.sh  test_suite_summary.py  test_uv_setup.py  update-manager.py
scripts/migrations/: migrate_v1_to_v2.sh
src/homelab/: __init__.py
static/: environment.js  main.js  runtime.js  styles.css  styles.js
template/: .sops.yaml  README.md.j2  devbox.json.jinja  justfile.j2  package.json.j2  package.json.jinja  pipes.py  pytest.ini
template/extensions/: __init__.py  validators.py
template/hooks/: __init__.py  post_copy.sh  pre_copy.py
template/tests/: 01_non_homelab_decrypt.sh  02_sops_yaml_schema.sh  04_just_safety_guards.sh  08_infra_guards.sh  (+7 more)
tests/: 02_sops_yaml_schema.sh  03_round_trip_homelab.sh  06_pulumi_project_validation.sh  07_ansible_molecule_validation.sh  08_infra_guards.sh  10_nx_distributed_validation.sh  conftest.py  log_test_helper.sh  run-tests.sh  test_helpers.py  test_supabase.py  test_vector_logger.sh  test_vector_logger_failure.sh  test_vector_logger_otlp.sh  test_vector_remap.py
tools/: project.json
(+158 files in other folders)
