[project]
name = "homelab"
version = "0.1.0"
description = "Smart Home K3s Lab - Infrastructure automation and monitoring for WSL2/Jetson homelab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "aiofiles>=23.2.1",
    "httpx>=0.25.0",
    "pyyaml>=6.0.1",
    "kubernetes>=28.1.0",
    "ansible>=8.0.0",
    # Supabase and PostgreSQL dependencies
    "asyncpg>=0.29.0",
    "supabase>=2.0.0",
    "postgrest>=0.13.0",
    "pulumi>=3.95.0",
    "pulumi-kubernetes>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    # Additional development dependencies
    "psutil>=5.9.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
homelab = "homelab.cli.main:app"
audit = "scripts.system_audit:main"
install-components = "scripts.install_components:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "--disable-warnings",
]
