[project]
name = "homelab"
version = "0.1.0"
description = "Smart Home K3s Lab - Infrastructure automation and monitoring for WSL2/Jetson homelab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "aiofiles>=23.2.1",
    "httpx>=0.25.0",
    "pyyaml>=6.0.1",
    "kubernetes>=28.1.0",
    "ansible>=8.0.0",
    # Supabase and PostgreSQL dependencies
    "asyncpg>=0.29.0",
    "supabase>=2.0.0",
    "postgrest>=0.13.0",
    "pulumi>=3.95.0",
    "pulumi-kubernetes>=4.0.0",
    "psycopg2-binary>=2.9.9",  # Added psycopg2-binary
    "pika>=1.3.0",  # Added pika
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    # Additional development dependencies
    "psutil>=5.9.0",
    "paho-mqtt>=1.6.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "paho-mqtt>=1.6.0",
    "psutil>=5.9.0",
]

[project.scripts]
homelab = "homelab.cli.main:app"
audit = "scripts.system_audit:main"
install-components = "scripts.install_components:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--cov=homelab",  # Change from src to your actual package name
    "--cov=scripts",
    "--cov=infrastructure",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=25",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
    "--durations=10",
    "--disable-warnings",
]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, may require external resources)",
    "e2e: End-to-end tests (slowest, full system tests)",
    "makefile: Tests for Makefile functionality",
    "slow: Tests that take more than 2 seconds",
    "network: Tests that require network connectivity",
    "k8s: Tests that require Kubernetes/K3s cluster",
    "supabase: Tests specific to Supabase functionality",
    "backup: Tests for backup and restore functionality",
    "security: Security-related tests",
    "performance: Performance optimization tests",
    "asyncio: mark a test as asyncio-based",
]
asyncio_mode = "auto"
minversion = "7.0"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*PYTHONPATH.*:UserWarning",
]
